# IntelligentCarPriceAnalysisagent

./: .dockerignore  .env.docker  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.example.yml  docker-compose.yml  main.py  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  schema.sql  录入测试.md
.claude/: settings.local.json
app/: CONTEXT.md  __init__.py
app/agent/: agent.py  context.py  discovery.py  formatter.py  planner.py  prompts.py  tool_adapter.py  tool_calling.py  tool_registry.py
app/api/: admin.py  auth.py  chat.py  data.py  mcp.py  rag.py
app/auth/: dependencies.py  jwt.py
app/core/: config.py  logging.py
app/db/: database.py  models.py
app/mcp/: __init__.py  adapter.py  client.py  models.py
app/memory/: redis_memory.py
app/multi_agent/: __init__.py  base.py  knowledge.py  orchestrator.py  searcher.py  validator.py  writer.py
app/providers/: __init__.py  base.py  database.py  registry.py  (+2 more)
crawler/: dongchedi_spider.py  tesla_spider.py
docs/: API.md  ARCHITECTURE.md  AUTH.md  FRONTEND.md  LLM_CONFIG.md  MCP.md  RAG.md  README.md  SETUP.md  TROUBLESHOOTING.md  openclaw-ddg-search-prompt.md
frontend/: .dockerignore  CONTEXT.md  README.md  index.html  nginx.conf  package-lock.json  package.json
knowledge_base/: README.md
mcp_servers/: __init__.py  base.py  car_data_server.py  rag_server.py  run_all.py  search_server.py
scripts/: README.md  docker-entrypoint.sh  test_function_calling.py
tests/: test_agent.py  test_chunking.py  test_context.py
(+55 files in other folders)
