[project]
name = "peng-shao-stay-intelligentcarpriceanalysisagent"
version = "0.1.0"
description = "AutoMind AI agent for intelligent car price analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langchain-tavily>=0.1.0",
    "requests>=2.31.0",
    "httpx>=0.26.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pypdf>=5.0.0",
    "markdown>=3.7.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
